--- a/app.json
+++ b/app.json
@@ -1,16 +1,16 @@
 {
   "expo": {
-    "name": "ElfiContaDeEnergia",
-    "description": "This project is really great.",
-    "slug": "ElfiContaDeEnergia",
+    "name": "Elfi Conta De Energia",
+    "description": "Está aplicação é uma ferramenta para lhe ajudar a calcular quanto esta custando sua Conta de Energia HOJE.",
+    "slug": "Elfi Conta De Energia",
     "privacy": "public",
     "sdkVersion": "31.0.0",
     "platforms": ["ios", "android"],
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/icon.jpg",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/splash.jpg",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
